[package]
authors = ["Pendulum"]
edition = "2018"
name = "spacewalk-primitives"
version = "1.0.9"

[dependencies]
bstringify = "0.1.2"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
scale-encode = {version = "0.7.1", default-features = false, features = ["derive"] }
scale-decode = {version = "0.13", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"]}
base58 = { version = "0.2.0" }
hex = { version = "0.4.3", optional = true }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

substrate-stellar-sdk = { git = "https://github.com/pendulum-chain/substrate-stellar-sdk", default-features = false, features = ['offchain', 'all-types'] }

[features]
default = ["std"]
std = [
    "scale-encode/std",
    "scale-decode/std",
    "serde/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "substrate-stellar-sdk/std",
    "hex"
]
