[package]
authors = ["Pendulum"]
edition = "2018"
name = "spacewalk-primitives"
version = "1.0.13"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
scale-encode = { workspace = true, features = ["derive"] }
scale-decode = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
base58 = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }

substrate-stellar-sdk = { workspace = true, features = ["offchain", "all-types"] }

[features]
default = ["std"]
std = [
    "scale-encode/std",
    "scale-decode/std",
    "serde/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "substrate-stellar-sdk/std"
]
