[package]
authors = ["Pendulum"]
edition = "2018"
name = "spacewalk-primitives"
version = "1.0.16"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
scale-encode = { workspace = true, features = ["derive"] }
scale-decode = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
base58 = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }

substrate-stellar-sdk = { workspace = true, features = ["all-types"] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"scale-decode/std",
	"scale-encode/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"substrate-stellar-sdk/std",
]
camel-case-ignore = []
