[package]
authors = ["Pendulum"]
edition = "2018"
name = "spacewalk-rpc"
version = "1.2.0"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.16.0", features = ["server", "macros"] }

# Parachain dependencies
primitives = { package = "spacewalk-primitives", path = "../primitives" }

module-issue-rpc = { path = "../pallets/issue/rpc" }
module-redeem-rpc = { path = "../pallets/redeem/rpc" }
module-replace-rpc = { path = "../pallets/replace/rpc" }
module-vault-registry-rpc = { path = "../pallets/vault-registry/rpc" }

# Substrate dependencies
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.35" }
