[package]
authors = ["Pendulum"]
edition = "2018"
name = "spacewalk-rpc"
version = "1.0.1"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.16.0", features = ["server", "macros"] }

# Parachain dependencies
primitives = { package = "spacewalk-primitives", path = "../primitives" }

module-issue-rpc = { path = "../pallets/issue/rpc" }
module-redeem-rpc = { path = "../pallets/redeem/rpc" }
module-replace-rpc = { path = "../pallets/replace/rpc" }
module-oracle-rpc = { path = "../pallets/oracle/rpc" }
module-vault-registry-rpc = { path = "../pallets/vault-registry/rpc" }

# Substrate dependencies
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
