[package]
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
name = "bitcoin"
version = "1.1.0"

[features]
cli = ["clap"]
default = ["interbtc"]
interbtc = ["interbtc-bitcoin"]
regtest-manual-mining = []
regtest-mine-on-tx = []
uses-bitcoind = []

[dependencies]
async-trait = "0.1.40"
backoff = {version = "0.3.0", features = ["tokio"]}
bitcoincore-rpc = {git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc", rev = "d9a1dd014f8eff8b00618457bb6b845c8b932bb7"}
clap = {version = "3.1", features = ["derive", "std", "env"], optional = true}
esplora-btc-api = "1.0.3"
futures = "0.3.5"
hex = "0.4.2"
hyper = "0.10"
log = "0.4.0"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
serde_json = "1.0.71"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}

# Substrate dependencies
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17"}

[dependencies.interbtc-bitcoin]
git = "https://github.com/interlay/interbtc"
optional = true
package = "bitcoin"
rev = "22b7490625b34de6b04f5750eda5966083d98567"

[dev-dependencies]
mockall = "0.8.1"
rand = {version = "0.7"}
regex = "1.4.3"
