[package]
name = "runner"
version = "1.0.13"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true}
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
codec = { workspace = true, features = ["derive", "full", "bit-vec"] }
sp-core = { workspace = true, default-features = true }
thiserror = { workspace = true }
log = { workspace = true}
env_logger ={ workspace = true }
reqwest = { workspace = true, features = ["native-tls-vendored"]}
# reuse version of `url` depended on by `reqwest`
url = { workspace = true }
nix = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true , features = ["futures-v0_3"] }
futures = { workspace = true }
subxt = {version = "0.33.0", default-features = false, features = ["jsonrpsee", "native"]}
sha2 = { workspace = true, default-features = true }

[dev-dependencies]
sysinfo.workspace = true
tempdir.workspace = true
mockall.workspace = true
