[package]
authors = ["Pendulum"]
edition = "2018"
name = "service"
version = "1.0.11"

[dependencies]
async-trait = "0.1.40"
clap = "3.1"
futures = "0.3.5"
thiserror = "1.0"

tokio = { version = "1.37", features = ["full"] }
warp = "0.3.2"

serde_json = "1.0.71"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt"] }

governor = "0.5.0"
nonzero_ext = "0.3.0"

# Workspace dependencies
runtime = { path = "../runtime" }
wallet = { path = "../wallet" }
