[package]
authors = ["Pendulum"]
edition = "2018"
name = "service"
version = "1.0.17"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

tokio = { workspace = true, features = ["full"] }
warp = { workspace = true }

serde_json = { workspace = true }

tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "fmt"] }

governor = { workspace = true}
nonzero_ext = { workspace = true }

# Workspace dependencies
runtime = { path = "../runtime" }
wallet = { path = "../wallet" }
